src/main/resources/public/css/custom-bootstrap.css
.togglebutton {
	margin-left: 10px;
}

.toggle {
	margin-left: 4px;
}

.navbar-brand>img {
	display: inline-block;
	padding-bottom: 5px;
}

.modal-title {
	margin-right: 30px;
}

.navbar, .navbar.navbar-default {
	background-color: #2196F3;
	border-radius: 0px;
	min-width: 300px;
	height: 50px;
	margin: 0px;
}

.navbar-default .navbar-brand {
	font-size: 25px; 
	font-family: 'Lato', serif;
}

